# FiNeR

./: .gitignore  meson.build
src/lib/: finer_section_t.f90  meson.build
src/tests/: finer_test_parse.f90
subprojects/: penf.wrap  stringifor.wrap
